--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -1,5 +1,5 @@
 <section class="intro">
   <div class="container">
-    <p class="lead">Hello from Peter Pan Chih-fei!</p>
+    <p class="lead">Hello from Peter P'an Chih-fei!</p>
   </div>
 </section>
